added db feature to write user queries to google sheets.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 app.py
 localllama.py
 .env
-temp.ipynb
+
 resume_reader_v2.py
 config.toml
-temp1-321221-dabd56a34836.json
+
 .streamlit/secrets.toml
-credentials.json
+
+temp.py
+temp1-321221-945d78144c78.json
